deployment/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: dev
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: api:k1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: dev
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - name: api
      port: 8000
      nodePort: 30333
  type: NodePort
