deployment/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: dev
spec:
  selector:
    matchLabels:
      app: mongo
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          imagePullPolicy: Always
          ports:
            - containerPort: 27017
              name: mongo

          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db

      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc

--- #Service

apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: dev
  labels:
    app: mongo
spec:
  ports:
    - name: mongo
      port: 27017
      nodePort: 30332
  type: NodePort
  selector:
    app: mongo
